--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@bit/semantic-org.semantic-ui-react.button": "^0.86.0",
+    "@bit/woobydev.components.social-button": "0.0.1",
     "@types/jest": "24.0.18",
     "@types/node": "12.7.7",
     "@types/react": "16.9.3",
@@ -11,7 +12,8 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.2",
-    "typescript": "3.6.3"
+    "typescript": "3.6.3",
+    "styled-components": "^4.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
